--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
   <div class="grid-container">
 
     <!-- Food Tab -->
-    <div class="grid-x grid-padding-x">
-      <div class="small-12 large-4 cell">
+    <div id="first-box" class="grid-x grid-padding-x">
+      <div  class="small-12 large-4 cell">
         <a href="">
           <img src="images/food.jpg" alt="">
         </a>
