Open Graph data

--- a/index.html
+++ b/index.html
@@ -10,8 +10,17 @@
       gtag('config', 'UA-130548534-3');
     </script>
 
+    <!--Compatibility-->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <!-- Social Metadata-->
+    <meta property="og:title" content="Aniki's Sushi and Sake Bar">
+    <meta property="og:description" content="Great selection of sushi and sake in Fremont.">
+    <meta property="og:image" content="https://xs9734.github.io/anikisushi/images/food.jpg">
+    <meta property="og:url" content="https://xs9734.github.io/anikisushi/index.html">
+
+
     <!-- Author & SEO Info-->
     <meta name="author" content="David Cervantes">
     <meta name="keywords" content="aniki, Sushi Bar, Sushi, Sake, Fremont, Sushi Restaurant, Japanese Cuisine, Food ">
