twitter card added

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
     <meta property="og:description" content="Great selection of sushi and sake in Fremont.">
     <meta property="og:image" content="https://xs9734.github.io/anikisushi/images/food.jpg">
     <meta property="og:url" content="https://xs9734.github.io/anikisushi/index.html">
+    <meta property="og:type" content="restaurant.restaurant">
+    <meta name="twitter:title" content="Aniki's Sushi and Sake Bar ">
+    <meta name="twitter:description" content="Great selection of sushi and sake located in Fremont.">
+    <meta name="twitter:image" content="https://xs9734.github.io/anikisushi/images/food.jpg">
+    <meta name="twitter:card" content="summary_large_image">> 
+
 
 
     <!-- Author & SEO Info-->
