--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta name="twitter:title" content="Aniki's Sushi and Sake Bar ">
     <meta name="twitter:description" content="Great selection of sushi and sake located in Fremont.">
     <meta name="twitter:image" content="https://xs9734.github.io/anikisushi/images/food.jpg">
-    <meta name="twitter:card" content="summary_large_image">> 
+    <meta name="twitter:card" content="summary_large_image"> 
 
 
 
