navigation menu text fixes

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </div>
     <div class="top-bar-right">
       <ul class="menu vertical medium-horizontal">
-        <li><a href="#">Our Staff</a></li>
+        <li><a href="#">Our&nbsp;Staff</a></li>
         <li><a href="#">Contact</a></li>
 
       </ul>
