new pages added

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <ul class="menu vertical medium-horizontal">
         <li><a href="#">Food</a></li>
         <li><a href="#">Drinks</a></li>
-        <li><a href="#">Location</a></li>
+        <li><a href="pages/location.html">Location</a></li>
       </ul>
     </div>
     <div class="top-bar-center">
@@ -75,7 +75,7 @@
 
     <!-- Food Tab -->
     <div id="first-box" class="grid-x grid-padding-x">
-      <div  class="small-12 large-4 cell">
+      <div  class="small-12 large-4 cell tabes">
         <a href="">
           <img src="images/food.jpg" alt="">
         </a>
@@ -104,12 +104,12 @@
     <!-- Location Tab -->
     <div class="grid-x grid-padding-x">
       <div class="small-12 large-4 cell">
-        <a href="">
-          <img src="images/location.jpg" alt="">
+        <a href="pages/location.html">
+          <img src="images/location.jpg" alt="Aniki's Sushi outdoor view">
         </a>
       </div>
       <div class="small-12 large-8 cell nav-box-odd text-center">
-        <a href="">
+        <a href="pages/location.html">
           Location
         </a>
       </div>
