--- a/pages/location.html
+++ b/pages/location.html
@@ -42,7 +42,7 @@
     <!-- Mobile Navigation -->
   <div id="mobile-nav" class="title-bar topbar-center-logo-mobile" data-responsive-toggle="topbar-center-logo" data-hide-for="medium">
     <div class="title-bar-left">
-      <div class="title-bar-title"><img src="../images/aniki_logo.png" alt="" /></div>
+      <div class="title-bar-title"><a href="../index.html"><img src="../images/aniki_logo.png" alt="Aniki Sushi Logo"/></a></div>
     </div>
     <div class="title-bar-right">
       <button class="menu-icon" type="button" data-toggle="topbar-center-logo"></button>
@@ -78,7 +78,7 @@
         <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2289.029260216304!2d-121.98562765461025!3d37.54943048749335!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x40ef3c2c755326fa!2sAniki&#39;s+Sushi!5e0!3m2!1sen!2sus!4v1546583588131" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
       <div class="small-12 large-8 cell nav-box-odd text-center">
-        <a id="address" href="">
+        <a id="address" href="https://maps.google.com/?daddr=3810+Mowry+Ave,+Fremont,+CA">
           3810 Mowry Ave, Fremont, CA 94538 <br>
           (510) 797-3474      
         </a>
