--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
   <body>
 
     <!-- Mobile Navigation -->
-  <div id="mobile-nav" class="title-bar topbar-center-logo-mobile" data-responsive-toggle="topbar-center-logo" data-hide-for="medium">
-    <div class="title-bar-left">
-      <div class="title-bar-title"><img src="images/aniki_logo.png" alt="" /></div>
+    <div id="mobile-nav" class="title-bar topbar-center-logo-mobile" data-responsive-toggle="topbar-center-logo" data-hide-for="medium">
+      <div class="title-bar-left">
+        <div class="title-bar-title"><a href="index.html"><img src="../images/aniki_logo.png" alt="Aniki Sushi Logo"/></a></div>
+      </div>
+      <div class="title-bar-right">
+        <button class="menu-icon" type="button" data-toggle="topbar-center-logo"></button>
+      </div>
     </div>
-    <div class="title-bar-right">
-      <button class="menu-icon" type="button" data-toggle="topbar-center-logo"></button>
-    </div>
-  </div>
   
   <!-- Tablet & Desktop Navigation -->
   <div class="top-bar topbar-center-logo" id="topbar-center-logo">
