initial staff commit

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
   </head>
+  
   <body>
 
     <!-- Mobile Navigation -->
@@ -118,12 +119,12 @@
     <!-- Our Staff Tab-->
     <div class="grid-x grid-padding-x">
       <div class="small-12 large-4 cell">
-        <a href="">
+        <a href="pages/staff.html">
           <img src="images/staff.jpg" alt="">
         </a>
       </div>
       <div class="small-12 large-8 cell nav-box-even text-center">
-        <a href="">
+        <a href="pages/staff.html">
           Our Staff
         </a>
       </div>
