staff menu info

--- a/pages/staff.html
+++ b/pages/staff.html
@@ -76,43 +76,58 @@
     <div id="first-box" class="grid-x grid-padding-x">
         <div  class="small-12 large-4 cell tabes">
           <a href="">
-            <img src="../images/food.jpg" alt="">
+            <img src="../images/headchef.jpg" alt="Chef Leo Oh">
           </a>
         </div>
         <div class="small-12 large-8 cell nav-box-odd text-center">
           <a href="">
-            Food
+            Leo Oh
           </a>
         </div>
+        <div class="small-12 large-8 cell nav-box-even text-center subhead">
+            <a href="">
+              Head Chef
+            </a>
+          </div>
       </div>
       
       <!-- Robert Tab-->
       <div class="grid-x grid-padding-x">
         <div class="small-12 large-4 cell">
           <a href="">
-            <img src="../images/drinks.jpg" alt="">
+            <img src="../images/founder.jpg" alt="Robert">
           </a>
         </div>
-        <div class="small-12 large-8 cell nav-box-even text-center">
-          <a href="">
-            Drinks
-          </a>
+        <div class="small-12 large-8 cell nav-box-odd text-center">
+            <a href="">
+              Robert
+            </a>
+          </div>
+          <div class="small-12 large-8 cell nav-box-even text-center subhead">
+              <a href="">
+                Founder
+              </a>
+            </div>
         </div>
-      </div>
   
       <!-- Abdul Tab -->
       <div class="grid-x grid-padding-x">
         <div class="small-12 large-4 cell">
-          <a href="pages/location.html">
-            <img src="../images/location.jpg" alt="Aniki's Sushi outdoor view">
+          <a href="">
+            <img src="../images/founder2.jpg" alt="Abdul">
           </a>
         </div>
         <div class="small-12 large-8 cell nav-box-odd text-center">
-          <a href="location.html">
-            Location
-          </a>
+            <a href="">
+              Abdul
+            </a>
+          </div>
+          <div class="small-12 large-8 cell nav-box-even text-center subhead">
+              <a href="">
+                Founder
+              </a>
+            </div>
         </div>
-      </div>
 
   </div>
 
