navigation links added

--- a/pages/ref.html
+++ b/pages/ref.html
@@ -52,9 +52,9 @@
   <div class="top-bar topbar-center-logo" id="topbar-center-logo">
     <div class="top-bar-left">
       <ul class="menu vertical medium-horizontal">
-        <li><a href="#">Food</a></li>
-        <li><a href="#">Drinks</a></li>
-        <li><a href="#">Location</a></li>
+        <li><a href="food.html">Food</a></li>
+        <li><a href="drinks.html">Drinks</a></li>
+        <li><a href="location.html">Location</a></li>
       </ul>
     </div>
     <div class="top-bar-center">
@@ -62,8 +62,8 @@
     </div>
     <div class="top-bar-right">
       <ul class="menu vertical medium-horizontal">
-        <li><a href="#">Our&nbsp;Staff</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="staff.html">Our&nbsp;Staff</a></li>
+        <li><a href="contact.html">Contact</a></li>
 
       </ul>
     </div>
