--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
   <div class="top-bar topbar-center-logo" id="topbar-center-logo">
     <div class="top-bar-left">
       <ul class="menu vertical medium-horizontal">
-        <li><a href="#">Food</a></li>
-        <li><a href="#">Drinks</a></li>
+        <li><a href="pages/food.html">Food</a></li>
+        <li><a href="pages/food.html">Drinks</a></li>
         <li><a href="pages/location.html">Location</a></li>
       </ul>
     </div>
@@ -64,8 +64,8 @@
     </div>
     <div class="top-bar-right">
       <ul class="menu vertical medium-horizontal">
-        <li><a href="#">Our&nbsp;Staff</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="pages/staff.html">Our&nbsp;Staff</a></li>
+        <li><a href="pages/contact.html">Contact</a></li>
 
       </ul>
     </div>
