initial contact commit

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -17,8 +17,8 @@
     <!-- Social Metadata-->
     <meta property="og:title" content="Aniki's Sushi and Sake Bar">
     <meta property="og:description" content="Aniki's is Located on Mowry Avenue and Fremont Boulevard.">
-    <meta property="og:image" content="https://xs9734.github.io/anikisushi/images/location_og.jpg">
-    <meta property="og:url" content="https://xs9734.github.io/anikisushi/location.html">
+    <meta property="og:image" content="https://xs9734.github.io/anikisushi/images/contact_og.jpg">
+    <meta property="og:url" content="https://xs9734.github.io/anikisushi/contact.html">
     <meta property="og:type" content="restaurant.restaurant">
     <meta name="twitter:title" content="Aniki's Sushi and Sake Bar ">
     <meta name="twitter:description" content="Aniki's is Located on Mowry Avenue and Fremont Boulevard.">
@@ -40,14 +40,14 @@
   <body>
 
     <!-- Mobile Navigation -->
-  <div id="mobile-nav" class="title-bar topbar-center-logo-mobile" data-responsive-toggle="topbar-center-logo" data-hide-for="medium">
-    <div class="title-bar-left">
-      <div class="title-bar-title"><a href="index.html"><img src="../images/aniki_logo.png" alt="Aniki Sushi Logo"/></a></div>
-    </div>
-    <div class="title-bar-right">
-      <button class="menu-icon" type="button" data-toggle="topbar-center-logo"></button>
-    </div>
-  </div>
+    <div id="mobile-nav" class="title-bar topbar-center-logo-mobile" data-responsive-toggle="topbar-center-logo" data-hide-for="medium">
+        <div class="title-bar-left">
+          <div class="title-bar-title"><a href="index.html"><img src="../images/aniki_logo.png" alt="Aniki Sushi Logo"/></a></div>
+        </div>
+        <div class="title-bar-right">
+          <button class="menu-icon" type="button" data-toggle="topbar-center-logo"></button>
+        </div>
+      </div>
   
   <!-- Tablet & Desktop Navigation -->
   <div class="top-bar topbar-center-logo" id="topbar-center-logo">
@@ -73,9 +73,33 @@
   <!-- Main Content -->
   <div class="grid-container">
 
-    <!-- Tab -->
-    <div  class="grid-x grid-padding-x">
-    </div>
+    <!-- Call Tab -->
+    <div id="first-box" class="grid-x grid-padding-x">
+        <div class="small-12 large-8 cell nav-box-odd text-center">
+          <a href="">
+            Call Us
+          </a>
+        </div>
+        <div class="small-12 large-8 cell nav-box-even text-center subhead">
+            <a href="">
+                510 797 3474
+            </a>
+          </div>
+      </div>
+      
+      <!-- Email Tab-->
+      <div class="grid-x grid-padding-x">
+        <div class="small-12 large-8 cell nav-box-odd text-center">
+            <a href="">
+              Email Us
+            </a>
+          </div>
+          <div class="small-12 large-8 cell nav-box-even text-center subhead">
+              <a href="">
+                contact@anikisushi.com
+              </a>
+            </div>
+        </div>
     
   </div>
 
