--- a/pages/ref.html
+++ b/pages/ref.html
@@ -42,7 +42,7 @@
     <!-- Mobile Navigation -->
   <div id="mobile-nav" class="title-bar topbar-center-logo-mobile" data-responsive-toggle="topbar-center-logo" data-hide-for="medium">
     <div class="title-bar-left">
-      <div class="title-bar-title"><a href="index.html"><img src="../images/aniki_logo.png" alt="Aniki Sushi Logo"/></a></div>
+      <div class="title-bar-title"><a href="../index.html"><img src="../images/aniki_logo.png" alt="Aniki Sushi Logo"/></a></div>
     </div>
     <div class="title-bar-right">
       <button class="menu-icon" type="button" data-toggle="topbar-center-logo"></button>
