--- a/pages/location.html
+++ b/pages/location.html
@@ -72,9 +72,9 @@
 
   <!-- Main Content -->
   <div class="grid-container">
-    <!-- Tab -->
+    <!-- Address Tab -->
     <div  id="first-box" class="grid-x grid-padding-x" id="first-box">
-      <div class="small-12 large-4 cell">
+      <div class="small-12 large-4 cell map_wrapper">
         <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2289.029260216304!2d-121.98562765461025!3d37.54943048749335!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x40ef3c2c755326fa!2sAniki&#39;s+Sushi!5e0!3m2!1sen!2sus!4v1546583588131" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
       <div class="small-12 large-8 cell nav-box-odd text-center">
@@ -85,6 +85,94 @@
       </div>
     </div>
 
+    <!-- Hours Tab -->
+    <div class="grid-x grid-padding-x">
+      <div class="small-12 large-8 cell nav-box-even text-center day">
+        <p>Hours</p>
+      </div>
+    </div>
+    
+
+    <!-- Sunday Tab-->
+    <div class="grid-x grid-padding-x">
+      <div class="small-12 large-4 cell nav-box-odd text-center day">
+        <p>Sunday</p>
+      </div>
+      <div class="small-12 large-8 cell nav-box-sub text-center">
+        <p>1PM - 8:45PM
+        </p>
+      </div>
+    </div>
+
+    <!-- Monday Tab-->
+    <div class="grid-x grid-padding-x">
+      <div class="small-12 large-4 cell nav-box-odd text-center day">
+        <p>Monday</p>
+      </div>
+      <div class="small-12 large-8 cell nav-box-sub text-center">
+        <p>Closed</p>
+      </div>
+    </div>
+
+    <!-- Tuesday Tab-->
+    <div class="grid-x grid-padding-x">
+      <div class="small-12 large-4 cell nav-box-odd text-center day">
+        <p>Tuesday</p>
+      </div>
+      <div class="small-12 large-8 cell nav-box-sub text-center">
+        <p>Lunch 11:00AM-2:15PM <br> 
+           Dinner 5:00PM-9:15PM
+        </p>
+      </div>
+    </div>
+
+    <!-- Wednesday Tab-->
+    <div class="grid-x grid-padding-x">
+      <div class="small-12 large-4 cell nav-box-odd text-center day">
+        <p>Wednesday</p>
+      </div>
+      <div class="small-12 large-8 cell nav-box-sub text-center">
+        <p>Lunch 11:00AM-2:15PM <br> 
+           Dinner 5:00PM-9:15PM
+        </p>
+      </div>
+    </div>
+
+    <!-- Thursday Tab-->
+    <div class="grid-x grid-padding-x">
+      <div class="small-12 large-4 cell nav-box-odd text-center day">
+        <p>Thursday</p>
+      </div>
+      <div class="small-12 large-8 cell nav-box-sub text-center">
+        <p>Lunch 11:00AM-2:15PM <br> 
+           Dinner 5:00PM-9:15PM
+        </p>
+      </div>
+    </div>
+
+    <!-- Friday Tab-->
+    <div class="grid-x grid-padding-x">
+      <div class="small-12 large-4 cell nav-box-odd text-center day">
+        <p>Friday</p>
+      </div>
+      <div class="small-12 large-8 cell nav-box-sub text-center">
+        <p>Lunch 11:00AM-2:15PM <br> 
+           Dinner 5:00PM-10:15PM
+        </p>
+      </div>
+    </div>
+
+    <!-- Saturday Tab-->
+    <div class="grid-x grid-padding-x">
+      <div class="small-12 large-4 cell nav-box-odd text-center day">
+        <p>Saturday</p>
+      </div>
+      <div class="small-12 large-8 cell nav-box-sub text-center">
+        <p>Lunch 11:00AM-2:15PM <br> 
+           Dinner 5:00PM-10:15PM
+        </p>
+      </div>
+    </div>
   </div>
 
   <footer>
