Food Item Information

--- a/pages/food.html
+++ b/pages/food.html
@@ -72,78 +72,142 @@
 
   <!-- Main Content -->
   <div class="grid-container">
-
-    <!-- Appetizers Tab -->
-    <div class="grid-x grid-padding-x">
+    <!--Menu of Food Start-->
+    <div id="first-box" class="grid-x grid-padding-x">
+        <div class="small-12 medium-12 cell">
+            <ul class="foodmenu vertical accordion" data-accordion-menu>
+                <!--Appetizers-->
+                <li class="small-12 medium-12 cell nav-box-odd text-center">
+                    <a href="#" >Appetizers</a>
+                    <ul class="vertical nested">
+                        <li class="small-12 medium-12 cell nav-box-even-sub"><a href="#">Kitchen</a>
+                            <ul class="horizontal nested">
+                                <li class="food-item"><p>Edamame<br>2.95</p></li>
+                                <li class="food-item"><p>Spicy Garlic Edamame<br>4.95</p></li>
+                                <li class="food-item"><p>Gyoza<br>5.95</p></li>
+                                <li class="food-item"><p>Kaki Fried<br>7.95</p></li>
+                                <li class="food-item"><p>Agedashi Tofu<br>5.50</p></li>
+                                <li class="food-item"><p>Fried Calamari<br>8.95</p></li>
+                                <li class="food-item"><p>Soft Shell Crab<br>7.95</p></li>
+                                <li class="food-item"><p>Yakitori<br>5.95</p></li>
+                                <li class="food-item"><p>Hamachi Kama<br>10.95</p></li>
+                                <li class="food-item"><p>Salmon Kama<br>8.95</p></li>
+                                <li class="food-item"><p>Shumai<br>6.95</p></li>
+                                <li class="food-item"><p>Shrimp Tempura<br>6.95</p></li>
+                                <li class="food-item"><p>Vegetable Tempura<br>5.95</p></li>
+                                <li class="food-item"><p>Shrimp w/ Vegetable Tempura<br>7.95</p></li>
+                                <li class="food-item"><p>Aniki's Double Delight<br>9.95</p></li>
+                            </ul>
+                        </li>
+                        <li class="small-12 medium-12 cell nav-box-even-sub"><a href="#">Sushi Bar</a>
+                            <ul class="horizontal nested">
+                                <li class="food-item"><p>Food-Item<br>0.00</p></li>
+                            </ul>
+                        </li>
+                        <li class="small-12 medium-12 cell nav-box-even-sub"><a href="#">Side Orders</a>
+                            <ul class="horizontal nested">
+                                <li class="food-item"><p>Food-Item<br>0.00</p></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <!--Entrees-->
+                <li class="small-12 medium-12 cell nav-box-odd text-center">
+                    <a href="#">Entrees</a>
+                    <ul class="vertical nested">
+                        <li class="small-12 medium-12 cell nav-box-even-sub"><a href="#">Teriyaki</a>
+                            <ul class="horizontal nested">
+                                <li class="food-item"><p>Food-Item<br>0.00</p></li>
+                            </ul>
+                        </li>
+                        <li class="small-12 medium-12 cell nav-box-even-sub"><a href="#">Katsu</a>
+                            <ul class="horizontal nested">
+                                <li class="food-item"><p>Food-Item<br>0.00</p></li>
+                            </ul>
+                        </li>
+                        <li class="small-12 medium-12 cell nav-box-even-sub"><a href="#">Udon</a>
+                            <ul class="horizontal nested">
+                                <li class="food-item"><p>Food-Item<br>0.00</p></li>
+                            </ul>
+                        </li>
+                        <li class="small-12 medium-12 cell nav-box-even-sub"><a href="#">Bento Box</a>
+                            <ul class="horizontal nested">
+                                <li class="food-item"><p>Food-Item<br>0.00</p></li>
+                            </ul>
+                        </li>
+                        <li class="small-12 medium-12 cell nav-box-even-sub"><a href="#">Lunch Bowl</a>
+                            <ul class="horizontal nested">
+                                <li class="food-item"><p>Food-Item<br>0.00</p></li>
+                            </ul>
+                        </li>
+                        <li class="small-12 medium-12 cell nav-box-even-sub"><a href="#">Kid's Menu</a>
+                            <ul class="horizontal nested">
+                                <li class="food-item"><p>Food-Item<br>0.00</p></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <!--Rolls-->
+                <li class="small-12 medium-12 cell nav-box-odd text-center">
+                    <a href="#">Rolls</a>
+                    <ul class="vertical nested">
+                        <li class="small-12 medium-12 cell nav-box-even-sub"><a href="#">Traditional</a>
+                            <ul class="horizontal nested">
+                                <li class="food-item"><p>Food-Item<br>0.00</p></li>
+                            </ul>
+                        </li>
+                        <li class="small-12 medium-12 cell nav-box-even-sub"><a href="#">Special</a>
+                            <ul class="horizontal nested">
+                                <li class="food-item"><p>Food-Item<br>0.00</p></li>
+                            </ul>
+                        </li>
+                        <li class="small-12 medium-12 cell nav-box-even-sub"><a href="#">Temaki</a>
+                            <ul class="horizontal nested">
+                                <li class="food-item"><p>Food-Item<br>0.00</p></li>
+                            </ul>
+                        </li>
+                        <li class="small-12 medium-12 cell nav-box-even-sub"><a href="#">Cooked</a>
+                            <ul class="horizontal nested">
+                                <li class="food-item"><p>Food-Item<br>0.00</p></li>
+                            </ul>
+                        </li>
+                        <li class="small-12 medium-12 cell nav-box-even-sub"><a href="#">Tempura</a>
+                            <ul class="horizontal nested">
+                                <li class="food-item"><p>Food-Item<br>0.00</p></li>
+                            </ul>
+                        </li>
+                        <li class="small-12 medium-12 cell nav-box-even-sub"><a href="#">Vegeterian</a>
+                            <ul class="horizontal nested">
+                                <li class="food-item"><p>Food-Item<br>0.00</p></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <!--Sashimi-->
+                <li class="small-12 medium-12 cell nav-box-odd text-center">
+                    <a href="#">Sashimi</a>
+                    <ul class="vertical nested">
+                        <li class="small-12 medium-12 cell nav-box-even-sub"><a href="#">Sashimi & Sushi</a>
+                            <ul class="horizontal nested">
+                                <li class="food-item"><p>Food-Item<br>0.00</p></li>
+                            </ul>
+                        </li>
+                        <li class="small-12 medium-12 cell nav-box-even-sub"><a href="#">Sashimi & Nigiri</a>
+                            <ul class="horizontal nested">
+                                <li class="food-item"><p>Food-Item<br>0.00</p></li>
+                            </ul>
+                        </li>
+                        <li class="small-12 medium-12 cell nav-box-even-sub"><a href="#">Party Platters</a>
+                            <ul class="horizontal nested">
+                                <li class="food-item"><p>Food-Item<br>0.00</p></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </div>        
     </div>
-
-    <!-- Appetizers Sushi Bar Tab -->
-    <div class="grid-x grid-padding-x">
-    </div>
-
-    <!-- Traditional Rolls Tab -->
-    <div class="grid-x grid-padding-x">
-    </div>
-
-    <!-- Temaki Hand Roll Tab -->
-    <div class="grid-x grid-padding-x">
-    </div>
-
-    <!-- Entree Tab -->
-    <div class="grid-x grid-padding-x">
-    </div>
-    
-    <!-- Katsu Tab -->
-    <div class="grid-x grid-padding-x">
-    </div>
-
-    <!-- Udon Tab -->
-    <div class="grid-x grid-padding-x">
-    </div>
-
-    <!-- Tempura Tab -->
-    <div class="grid-x grid-padding-x">
-    </div>
-
-    <!-- Bento Lunch Tab -->
-    <div class="grid-x grid-padding-x">
-    </div>
-
-    <!-- Bento Dinner Tab -->
-    <div class="grid-x grid-padding-x">
-    </div>
-
-    <!-- Vegetable Roll Tab -->
-    <div class="grid-x grid-padding-x">
-    </div>
-
-    <!-- Nigiri & Sashimi Tab -->
-    <div class="grid-x grid-padding-x">
-    </div>
-
-    <!-- Special Tempura Roll Tab -->
-    <div class="grid-x grid-padding-x">
-    </div>
-
-    <!-- Special Roll Tab -->
-    <div class="grid-x grid-padding-x">
-    </div>
-
-    <!-- Sushi & Sashimi Tab -->
-    <div class="grid-x grid-padding-x">
-    </div>
-
-    <!-- Party Platter Tab -->
-    <div class="grid-x grid-padding-x">
-    </div>
-
-    <!-- Kids Tab -->
-    <div class="grid-x grid-padding-x">
-    </div>
-
-    <!-- Side Order Tab -->
-    <div class="grid-x grid-padding-x">
-    </div>
+    <!--Menu of Food End-->
   </div>
 
   <footer>
