--- a/pages/food.html
+++ b/pages/food.html
@@ -40,7 +40,7 @@
   <body>
 
     <!-- Mobile Navigation -->
-  <div id="mobile-nav" class="title-bar topbar-center-logo-mobile" data-responsive-toggle="topbar-center-logo" data-hide-for="medium">
+  <div id="mobile-nav" class="title-bar topbar-center-logo-mobile" data-responsive-toggle="topbar-center-logo" data-hide-for="large">
     <div class="title-bar-left">
       <div class="title-bar-title"><a href="../index.html"><img src="../images/aniki_logo.png" alt="Aniki Sushi Logo"/></a></div>
     </div>
