--- a/pages/contact.html
+++ b/pages/contact.html
@@ -40,35 +40,28 @@
   <body>
 
     <!-- Mobile Navigation -->
-    <div id="mobile-nav" class="title-bar topbar-center-logo-mobile" data-responsive-toggle="topbar-center-logo" data-hide-for="medium">
-        <div class="title-bar-left">
-          <div class="title-bar-title"><a href="../index.html"><img src="../images/aniki_logo.png" alt="Aniki Sushi Logo"/></a></div>
-        </div>
-        <div class="title-bar-right">
-          <button class="menu-icon" type="button" data-toggle="topbar-center-logo"></button>
-        </div>
+    <div id="mobile-nav" class="title-bar topbar-center-logo-mobile" data-responsive-toggle="topbar-center-logo" data-hide-for="large">
+      <div class="title-bar-left">
+        <div class="title-bar-title"><a href="../index.html"><img src="../images/aniki_logo.png" alt="Aniki Sushi Logo"/></a></div>
       </div>
-  
-  <!-- Tablet & Desktop Navigation -->
-  <div class="top-bar topbar-center-logo" id="topbar-center-logo">
-    <div class="top-bar-left">
-      <ul class="menu vertical medium-horizontal">
-        <li><a href="food.html">Food</a></li>
-        <li><a href="drinks.html">Drinks</a></li>
-        <li><a href="location.html">Location</a></li>
-      </ul>
+      <div class="title-bar-right">
+        <button class="hollow button warning large" id="nav-button" type="button" data-toggle="example-dropdown-bottom-right" onclick="menubuttonanimate(this)">
+          <div class="bar1"></div>
+          <div class="bar2"></div>
+          <div class="bar3"></div>
+        </button>
+        <nav class="dropdown-pane" data-position="bottom" data-alignment="right" id="example-dropdown-bottom-right" data-dropdown data-auto-focus="true">
+          <!-- My dropdown content in here -->
+          <ul>
+            <li><a href="food.html">Food</a></li>
+            <li><a href="drinks.html">Drinks</a></li>
+            <li><a href="location.html">Location</a></li>
+            <li><a href="staff.html">Our&nbsp;Staff</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
     </div>
-    <div class="top-bar-center">
-      <a href="#"><img src="https://placehold.it/100x39" alt="" /></a>
-    </div>
-    <div class="top-bar-right">
-      <ul class="menu vertical medium-horizontal">
-        <li><a href="staff.html">Our&nbsp;Staff</a></li>
-        <li><a href="contact.html">Contact</a></li>
-
-      </ul>
-    </div>
-  </div>
 
   <!-- Main Content -->
   <div class="grid-container">
